--- a/locale/pt.txt
+++ b/locale/pt.txt
@@ -14,6 +14,7 @@ LinkBehaviour_59E0249E_4206_AF00_41AE_C9C090B0E9EC.source = https://www.instagra
 
 ### Audio
 audiores_62637D0A_420B_B903_4180_BED357D3A75B.mp3Url = media/audio_5D9FA40D_4209_6F01_41C5_A62CB233B6EE_pt.mp3
+audiores_8ABA2929_85DD_690D_41CE_59FBC523055B.mp3Url = media/audio_8B69A62B_85DD_7B0E_41A3_7C6DF6326781_pt.mp3
 audiores_958BDE24_8582_C4FD_41C1_CE6B2516FF60.mp3Url = media/audio_95E7CA8D_858D_4DCE_41D8_9A4C40B71840_pt.mp3
 
 ### Title
@@ -33,6 +34,8 @@ Image_4E46EBE4_408E_33FC_41BE_7CA335C74944_mobile.url = skin/Image_4E46EBE4_408E
 Image_4E46EBE4_408E_33FC_41BE_7CA335C74944.url = skin/Image_4E46EBE4_408E_33FC_41BE_7CA335C74944_pt.png
 Image_4E6275A7_408A_347C_41C0_F5A3406760B8_mobile.url = skin/Image_4E6275A7_408A_347C_41C0_F5A3406760B8_mobile_pt.png
 Image_4E6275A7_408A_347C_41C0_F5A3406760B8.url = skin/Image_4E6275A7_408A_347C_41C0_F5A3406760B8_pt.png
+Image_8A720F9E_85E5_2906_41D0_33DED97CEAF8.url = skin/Image_8A720F9E_85E5_2906_41D0_33DED97CEAF8_pt.png
+Image_8ACC90E6_85E7_3706_41D5_00A89A1383C0.url = skin/Image_8ACC90E6_85E7_3706_41D5_00A89A1383C0_pt.png
 
 ## Tour
 
