--- a/locale/pt.txt
+++ b/locale/pt.txt
@@ -14,6 +14,8 @@ LinkBehaviour_59E0249E_4206_AF00_41AE_C9C090B0E9EC.source = https://www.instagra
 
 ### Audio
 audiores_62637D0A_420B_B903_4180_BED357D3A75B.mp3Url = media/audio_5D9FA40D_4209_6F01_41C5_A62CB233B6EE_pt.mp3
+audiores_9BC53C97_8B59_1EC0_41D3_148C58AE1304.mp3Url = media/audio_86F467C4_8B5B_0A47_41B7_09F60B87FD37_pt.mp3
+audiores_9BFD208F_8B59_06C0_41DC_392EA263A466.mp3Url = media/audio_86F73007_8B5B_05C0_41DC_64C97F5240BF_pt.mp3
 audiores_8ABA2929_85DD_690D_41CE_59FBC523055B.mp3Url = media/audio_8B69A62B_85DD_7B0E_41A3_7C6DF6326781_pt.mp3
 audiores_958BDE24_8582_C4FD_41C1_CE6B2516FF60.mp3Url = media/audio_95E7CA8D_858D_4DCE_41D8_9A4C40B71840_pt.mp3
 
